--- a/pom.xml
+++ b/pom.xml
@@ -1,8 +1,8 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <groupId>be.webtechie</groupId>
-    <artifactId>javafx-jar-template</artifactId>
+    <groupId>tucil.rhsolver</groupId>
+    <artifactId>Tucil3_13523064_13523084</artifactId>
     <version>0.0.1</version>
 
     <properties>
@@ -11,8 +11,6 @@
 
         <!-- DEPENDENCIES -->
         <javafx.version>21.0.3</javafx.version>
-        <log4j.version>2.24.0</log4j.version>
-        <tilesfx.version>21.0.9</tilesfx.version>
 
         <!-- BUILD PLUGIN VERSIONS -->
         <maven.compiler.version>3.13.0</maven.compiler.version>
@@ -20,12 +18,6 @@
     </properties>
 
     <dependencies>
-        <!-- Logging framework -->
-        <dependency>
-            <groupId>org.apache.logging.log4j</groupId>
-            <artifactId>log4j-core</artifactId>
-            <version>${log4j.version}</version>
-        </dependency>
 
         <!-- JavaFX -->
         <dependency>
@@ -34,16 +26,11 @@
             <version>${javafx.version}</version>
         </dependency>
 
-        <!-- Other dependencies -->
-        <dependency>
-            <groupId>eu.hansolo</groupId>
-            <artifactId>tilesfx</artifactId>
-            <version>${tilesfx.version}</version>
-        </dependency>
     </dependencies>
 
     <build>
-        <finalName>javafx-app</finalName>
+        <finalName>rush-hour-puzzle-solver</finalName>
+        <directory>bin</directory>
 
         <plugins>
             <!--
@@ -82,7 +69,7 @@
                     <archive>
                         <manifest>
                             <addClasspath>true</addClasspath>
-                            <mainClass>be.webtechie.app.AppLauncher</mainClass>
+                            <mainClass>tucil.rhsolver.app.AppLauncher</mainClass>
                         </manifest>
                     </archive>
                 </configuration>
